<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipToOutline="true">
<ImageView
    android:id="@+id/im"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="62dp"
    android:layout_marginTop="113dp"
    android:src="@drawable/sun"/>
    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="420dp"
        android:text="@string/Welcome_Ayush"
        android:textAppearance="@style/headline4"
        android:gravity="center"
        />
    <Button
        android:id="@+id/btn_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="507dp"
        android:layout_marginStart="34dp"
        android:text="@string/feeds"
        android:textAppearance="@style/feeds"
        android:gravity="center_horizontal|center_vertical"

        android:textColor="@null">

    </Button>
    <Button
        android:id="@+id/btn_primary2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@null"
        android:background="@drawable/btn_primary"
        android:layout_marginTop="626dp"
        android:layout_marginStart="34dp"
        android:text="@string/upload_image"
        android:textAppearance="@style/feeds"
        android:gravity="center_horizontal|center_vertical"

        android:textColor="@null">

    </Button>
</RelativeLayout>

