<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/base"
            android:layout_width="match_parent"
            android:layout_height="261dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="#3276A7" >
        <View
            android:id="@+id/ellipse_193"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="71dp"
            android:layout_marginStart="354dp"
            android:background="@drawable/round"
            />
        <View
            android:id="@+id/searchbar"
            android:layout_width="358dp"
            android:layout_height="60dp"
            android:layout_marginTop="158dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/searchbar"
            />
        <View
            android:id="@+id/search"
            android:layout_width="23.75dp"
            android:layout_height="23.75dp"
            android:layout_marginTop="175.81dp"
            android:layout_marginStart="43.8dp"
            android:background="@drawable/sicon"
            />

        <TextView
            android:id="@+id/explore"
            android:layout_width="129.62dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="78.43dp"
            android:layout_marginTop="174.03dp"
            android:text="@string/explore"
            android:textAppearance="@style/explore"
            android:lineSpacingExtra="2sp"
            android:gravity="top|start"
            />



        <TextView
            android:id="@+id/hello_ayush"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:text="@string/hello_ayush"
            android:textAppearance="@style/hello_ayush"
            android:lineSpacingExtra="-3sp"
            android:gravity="top|start"
            android:layout_marginStart="27dp"
            android:layout_marginTop="57dp"
            />
        <TextView
            android:id="@+id/ay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ay"
            android:textAppearance="@style/hello_ayush"
            android:lineSpacingExtra="-3sp"
            android:gravity="center|bottom"
            android:layout_marginStart="27dp"
            android:layout_marginTop="90dp"
            />


    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundTint="@color/white">
        <TextView
            android:id="@+id/browse_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/browse_by"
            android:textAppearance="@style/browse_by"
            android:lineSpacingExtra="-3sp"
            android:gravity="top|start"
            android:layout_marginTop="283dp"
            android:layout_marginStart="25dp"
            />

        <ImageButton
            android:id="@+id/rectangle_1"
            android:layout_width="96dp"
            android:layout_height="21dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="321dp"
            android:text="@string/latest"
            android:textColor="@null"
            android:gravity="center|fill_vertical"
            android:textAppearance="@style/latest"
            android:background="@drawable/rectangle_1"
            app:backgroundTint="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="323dp"
            android:text="@string/latest"
            android:gravity="center"
            android:textColor="@null"
            android:textAppearance="@style/latest"/>

        <ImageButton
            android:id="@+id/rectangle_2"
            android:layout_width="96dp"
            android:layout_height="21dp"
            android:layout_marginStart="143dp"
            android:layout_marginTop="321dp"
            android:background="@drawable/rectangle_1"
            app:backgroundTint="@null"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="178dp"
            android:layout_marginTop="323dp"
            android:text="@string/older"
            android:gravity="center"
            android:textColor="@null"
            android:textAppearance="@style/latest"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_marginTop="374dp"
            app:backgroundTint="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="LinearLayoutManager"
            android:scrollbars="vertical"/>




    </RelativeLayout>


</RelativeLayout>




