<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intro_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clipToOutline="true">


    <Button
        android:id="@+id/button3"
        app:backgroundTint="@null"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="306dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_smal"
        android:text="@string/skip_intro"
        android:textColor="@null"
        android:textAppearance="@style/skip_intro"       />

    <ImageView
        android:id="@+id/business_cr3"
        android:layout_width="335.93dp"
        android:layout_height="259dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/amico3" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36.33dp"
        android:layout_marginTop="414.4827575683594dp"
        app:cardBackgroundColor="@color/white">

        <ImageView
            android:id="@+id/white_backg3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/white_back">

        </ImageView>

        <TextView
            android:id="@+id/headline3"
            android:layout_width="271.58dp"
            android:layout_height="75dp"
            android:layout_marginStart="47dp"
            android:layout_marginTop="66dp"
            android:text="@string/our_vision"
            android:textAppearance="@style/headline" />

        <TextView
            android:id="@+id/body3"
            android:layout_width="272.69dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="120dp"
            android:alpha="0.4"
            android:gravity="center_vertical"
            android:lineSpacingExtra="0sp"
            android:text="@string/body"
            android:textAppearance="@style/body" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="250dp"
            android:background="@null"
            app:srcCompat="@drawable/skip3" />


    </androidx.cardview.widget.CardView>

</RelativeLayout>

